documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.VB

    Public Declare Sub L71_IndirectWr Lib "L71W32.DLL" Alias "_L71_IndirectWr@12" (ByVal value As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_IntClear Lib "L71W32.DLL" Alias "_L71_IntClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_IntConfig Lib "L71W32.DLL" Alias "_L71_IntConfig@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_IntDisable Lib "L71W32.DLL" Alias "_L71_IntDisable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_IntEnable Lib "L71W32.DLL" Alias "_L71_IntEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_IntEnableCond Lib "L71W32.DLL" Alias "_L71_IntEnableCond@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_IntGet Lib "L71W32.DLL" Alias "_L71_IntGet@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Sub L71_IntReset Lib "L71W32.DLL" Alias "_L71_IntReset@4" (ByVal handleval As UInt32)
    Public Declare Function L71_IORdW Lib "L71W32.DLL" Alias "_L71_IORdW@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_IOWINRdW Lib "L71W32.DLL" Alias "_L71_IOWINRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_IOWINWrW Lib "L71W32.DLL" Alias "_L71_IOWINWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L71_IOWrW Lib "L71W32.DLL" Alias "_L71_IOWrW@12" (ByVal value As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_KernDev Lib "L71W32.DLL" Alias "_L71_KernDev@8" (ByRef valueptr As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernEnd Lib "L71W32.DLL" Alias "_L71_KernEnd@4" (ByVal vxdptr As IntPtr) As Int32
    Public Declare Function L71_KernIntClear Lib "L71W32.DLL" Alias "_L71_KernIntClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernIntInstall Lib "L71W32.DLL" Alias "_L71_KernIntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernIntParam Lib "L71W32.DLL" Alias "_L71_KernIntParam@32" (ByVal clraddr As UInt32, ByVal clrwidth As UInt32, ByVal clrvalue As UInt32, ByVal stataddr As UInt32, ByVal statwidth As UInt32, ByVal statvalue As UInt32, ByVal statmask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernIntStatus Lib "L71W32.DLL" Alias "_L71_KernIntStatus@8" (ByRef valueptr As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernIntUninstall Lib "L71W32.DLL" Alias "_L71_KernIntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernIORdW Lib "L71W32.DLL" Alias "_L71_KernIORdW@12" (ByRef valueptr As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernIOWrW Lib "L71W32.DLL" Alias "_L71_KernIOWrW@12" (ByVal value As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernMEMFillW Lib "L71W32.DLL" Alias "_L71_KernMEMFillW@20" (ByVal value As UInt16, ByVal addrval As Int32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernMEMRdL Lib "L71W32.DLL" Alias "_L71_KernMEMRdL@16" (ByRef valueptr As UInt32, ByVal addrval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernMEMRdsL Lib "L71W32.DLL" Alias "_L71_KernMEMRdsL@20" (ByRef bufptr As UInt32, ByVal addrval As Int32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernMEMRdsW Lib "L71W32.DLL" Alias "_L71_KernMEMRdsW@20" (ByRef bufptr As UInt16, ByVal addrval As Int32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernMEMRdW Lib "L71W32.DLL" Alias "_L71_KernMEMRdW@16" (ByRef valueptr As UInt16, ByVal addrval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernMEMWrL Lib "L71W32.DLL" Alias "_L71_KernMEMWrL@16" (ByVal value As UInt32, ByVal addrval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernMEMWrsL Lib "L71W32.DLL" Alias "_L71_KernMEMWrsL@20" (ByRef bufptr As UInt32, ByVal addrval As Int32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernMEMWrsW Lib "L71W32.DLL" Alias "_L71_KernMEMWrsW@20" (ByRef bufptr As UInt16, ByVal addrval As Int32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernMEMWrW Lib "L71W32.DLL" Alias "_L71_KernMEMWrW@16" (ByVal value As UInt16, ByVal addrval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernQuick Lib "L71W32.DLL" Alias "_L71_KernQuick@8" (ByVal flag As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernStatus Lib "L71W32.DLL" Alias "_L71_KernStatus@12" (ByRef valueptr As UInt32, ByVal typeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_KernStatusEx Lib "L71W32.DLL" Alias "_L71_KernStatusEx@16" (ByRef valueptr As UInt32, ByVal typeval As UInt32, ByVal index As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ListAddr Lib "L71W32.DLL" Alias "_L71_ListAddr@12" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_ListAddrEx Lib "L71W32.DLL" Alias "_L71_ListAddrEx@12" (ByVal index As Int32, ByVal listaddr As UInt32, ByRef header As UInt16) As UInt32
    Public Declare Function L71_ListBlockRd Lib "L71W32.DLL" Alias "_L71_ListBlockRd@12" (ByRef buf As UInt16, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_ListBlockRdEx Lib "L71W32.DLL" Alias "_L71_ListBlockRdEx@16" (ByRef buf As UInt16, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_ListBlockWr Lib "L71W32.DLL" Alias "_L71_ListBlockWr@12" (ByRef buf As UInt16, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_ListBlockWrEx Lib "L71W32.DLL" Alias "_L71_ListBlockWrEx@16" (ByRef buf As UInt16, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_ListClear Lib "L71W32.DLL" Alias "_L71_ListClear@8" (ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ListConfig Lib "L71W32.DLL" Alias "_L71_ListConfig@16" (ByVal configval As UInt32, ByVal count As Int32, ByVal skipval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_ListConfigEx Lib "L71W32.DLL" Alias "_L71_ListConfigEx@16" (ByVal configval As UInt32, ByVal count As Int32, ByVal skipval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_ListDataRd Lib "L71W32.DLL" Alias "_L71_ListDataRd@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ListDataRdEx Lib "L71W32.DLL" Alias "_L71_ListDataRdEx@20" (ByRef buf As UInt16, ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ListDataWr Lib "L71W32.DLL" Alias "_L71_ListDataWr@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ListDataWrEx Lib "L71W32.DLL" Alias "_L71_ListDataWrEx@20" (ByRef buf As UInt16, ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ListInit Lib "L71W32.DLL" Alias "_L71_ListInit@12" (ByVal listaddr As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ListNextRd Lib "L71W32.DLL" Alias "_L71_ListNextRd@8" (ByVal listaddr As UInt32, ByRef header As UInt16) As UInt32
    Public Declare Function L71_ListNextWr Lib "L71W32.DLL" Alias "_L71_ListNextWr@8" (ByVal listaddr As UInt32, ByRef header As UInt16) As UInt32
    Public Declare Sub L71_ListPostRd Lib "L71W32.DLL" Alias "_L71_ListPostRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L71_ListPostWr Lib "L71W32.DLL" Alias "_L71_ListPostWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L71_ListPreRd Lib "L71W32.DLL" Alias "_L71_ListPreRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L71_ListPreWr Lib "L71W32.DLL" Alias "_L71_ListPreWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_ListStatus Lib "L71W32.DLL" Alias "_L71_ListStatus@8" (ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MakeLong Lib "L71W32.DLL" Alias "_L71_MakeLong@8" (ByVal valh As UInt16, ByVal vall As UInt16) As UInt32
    Public Declare Function L71_Mask Lib "L71W32.DLL" Alias "_L71_Mask@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Sub L71_MEMWINFillW Lib "L71W32.DLL" Alias "_L71_MEMWINFillW@20" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_MEMWINRdB Lib "L71W32.DLL" Alias "_L71_MEMWINRdB@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_MEMWINRdL Lib "L71W32.DLL" Alias "_L71_MEMWINRdL@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L71_MEMWINRdsL Lib "L71W32.DLL" Alias "_L71_MEMWINRdsL@20" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_MEMWINRdsW Lib "L71W32.DLL" Alias "_L71_MEMWINRdsW@20" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_MEMWINRdW Lib "L71W32.DLL" Alias "_L71_MEMWINRdW@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_MEMWINWrB Lib "L71W32.DLL" Alias "_L71_MEMWINWrB@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_MEMWINWrL Lib "L71W32.DLL" Alias "_L71_MEMWINWrL@16" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_MEMWINWrsL Lib "L71W32.DLL" Alias "_L71_MEMWINWrsL@20" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_MEMWINWrsW Lib "L71W32.DLL" Alias "_L71_MEMWINWrsW@20" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_MEMWINWrW Lib "L71W32.DLL" Alias "_L71_MEMWINWrW@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_Mod Lib "L71W32.DLL" Alias "_L71_Mod@8" (ByVal moda As UInt32, ByVal modb As UInt32) As UInt32
    Public Declare Function L71_ModeIsBC Lib "L71W32.DLL" Alias "_L71_ModeIsBC@4" (ByVal handleval As UInt32) As Int32
